<resources>
    <string name="app_name">Muqimiy</string>
    <string name="_1850_1903">1850–1903</string>
    <string name="muqimiy">Muqimiy</string>
    <string name="hayoti_va_ijodi">Hayoti va ijodi</string>
    <string name="asarlari">Asarlari</string>
    <string name="muqumiy_izidan">Muqimiy izidan</string>
    <string name="muqumiy_teatri">Muqimiy teatri</string>
    <string name="muqimiyshunoslar">Muqimiyshunoslar</string>
    <string name="muqimiy_ekspiditsiyasi">Muqimiy ekspeditsiyasi</string>
</resources>